Informative home page in case users stumble upon it.

--- a/AuntRosie/war/index.html
+++ b/AuntRosie/war/index.html
@@ -13,15 +13,9 @@
   </head>
 
   <body>
-    <h1>Hello App Engine!</h1>
-	
-    <table>
-      <tr>
-        <td colspan="2" style="font-weight:bold;">Available Servlets:</td>        
-      </tr>
-      <tr>
-        <td><a href="auntrosie"/>AuntRosie</td>
-      </tr>
-    </table>
+Greetings. Learn about the <a href="http://andrewhitchcock.org/?post=322">Aunt Rosie bot</a>.<br />
+Bot created by Andrew Hitchcock. Click the above link and then "Contact Me" for my e-mail address if you have feature requests or bugs.<br />
+The bot is powered by <a href="http://translate.google.com">Google Translate</a> and the <a href="http://code.google.com/apis/ajaxlanguage/">Google AJAX Language API</a>.
+
   </body>
 </html>
